[gd_scene load_steps=21 format=3 uid="uid://bas3p7dcyv87p"]

[ext_resource type="Script" uid="uid://c16a3erxsjbof" path="res://Script/player.gd" id="1_cn8ft"]
[ext_resource type="Texture2D" uid="uid://nhvwhx052vih" path="res://Assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_ghx8g"]
[ext_resource type="Texture2D" uid="uid://cmqyq8rkwaj3h" path="res://Assets/Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_vb2l2"]
[ext_resource type="Texture2D" uid="uid://cjiickv5tuyqd" path="res://Assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="3_0obeb"]
[ext_resource type="Texture2D" uid="uid://vcfr1f4f2b1y" path="res://Assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="4_of1vk"]
[ext_resource type="PackedScene" uid="uid://d1yblv8ohan7w" path="res://Itens/hurtbox.tscn" id="5_owu88"]
[ext_resource type="AudioStream" uid="uid://bu2uvoutr0sfd" path="res://Sounds/jump_sfx.wav" id="7_pedn8"]
[ext_resource type="AudioStream" uid="uid://5ln1hk6oq8b0" path="res://Sounds/hurtbox_sfx.wav" id="8_sinrj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5get"]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6mjss"]
atlas = ExtResource("2_vb2l2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ql3m"]
atlas = ExtResource("2_ghx8g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvhjs"]
atlas = ExtResource("2_ghx8g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fmeg"]
atlas = ExtResource("3_0obeb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_40pym"]
atlas = ExtResource("4_of1vk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0rip"]
atlas = ExtResource("4_of1vk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqshu"]
atlas = ExtResource("4_of1vk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0opfm"]
atlas = ExtResource("4_of1vk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f08u1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mjss")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ql3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvhjs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fmeg")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40pym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0rip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqshu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0opfm")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yysbm"]
size = Vector2(19.3333, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5ixl"]
size = Vector2(12, 4)

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -53)
scale = Vector2(3, 3)
collision_mask = 94
script = ExtResource("1_cn8ft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_k5get")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_f08u1")
animation = &"idle"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="hurtbox" parent="." instance=ExtResource("5_owu88")]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_yysbm")
debug_color = Color(0.747928, 0, 0.159751, 0.42)

[node name="remote_player" type="RemoteTransform2D" parent="."]

[node name="colision_header" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="collision_header" type="CollisionShape2D" parent="colision_header"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_m5ixl")

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pedn8")
volume_db = -25.0

[node name="hurtbox_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sinrj")
volume_db = -5.0
pitch_scale = 1.5

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="colision_header" to="." method="_on_colision_header_body_entered"]
